--- a/1_Manipulation_Pushing.ipynb
+++ b/1_Manipulation_Pushing.ipynb
@@ -60,7 +60,9 @@
     "# For convenience, a few definitions:\n",
     "gripper = \"l_gripper\"\n",
     "box = \"box\"\n",
-    "table = \"table\""
+    "table = \"table\"\n",
+    "\n",
+    "C.view()"
    ]
   },
   {
@@ -68,7 +70,7 @@
    "id": "a8a63972-f72c-4d2c-b98e-bf2ff0bda842",
    "metadata": {},
    "source": [
-    "## Defining the \"push\" motion\n",
+    "## Defining the push motion\n",
     "\n",
     "Using the ManipullationModelling class we can firstly generate two key time slices, one represents the joint state at the start of the push motion in front of the box and another at the end target position of the box. From that we ca fill in the sub-motions, states in between the two key frames, with a few constraints. For the first sub-motion we want the robot to retract the push, this means moving away from teh object before we approach the object leaving us in the desired starting position for our push.\n",
     "\n",
@@ -82,10 +84,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def push(obj: str, target_pos: list, info: str=\"\", vis: bool=False) -> tuple:\n",
+    "def push(obj: str, target_pos: list[float], info: str=\"\", vis: bool=False) -> tuple:\n",
     "\tM = manip.ManipulationModelling(C, f\"push_motion{info}\", ['l_gripper'])\n",
     "\tM.setup_pick_and_place_waypoints(gripper, obj, 1e-1)\n",
-    "\tM.straight_push([1.,2.], obj, gripper, table)\n",
+    "\tM.straight_push([1., 2.], obj, gripper, table)\n",
     "\tM.target_xy_position([2.], obj, target_pos)\n",
     "\tM.solve()\n",
     "\tif not M.feasible:\n",
@@ -157,102 +159,130 @@
      "output_type": "stream",
      "text": [
       "  -- feasible:push_motion0\n",
-      "     { time: 0.034617, evals: 80, done: 1, feasible: 1, sos: 0.0766002, f: 0, ineq: 0, eq: 0.0685053 }\n",
+      "     { time: 0.028632, evals: 55, done: 1, feasible: 1, sos: 0.27315, f: 0, ineq: 0, eq: 0.0889668 }\n",
       "  -- feasible:sub_motion_0--push_motion0\n",
-      "     { time: 0.672927, evals: 200, done: 1, feasible: 1, sos: 1.28071, f: 0, ineq: 1.08128e-06, eq: 0.0907689 }\n",
+      "     { time: 0.187483, evals: 93, done: 1, feasible: 1, sos: 2.90589, f: 0, ineq: 1.18567e-06, eq: 0.107973 }\n",
       "  -- feasible:sub_motion_1--push_motion0\n",
-      "     { time: 0.021588, evals: 9, done: 1, feasible: 1, sos: 0.0839804, f: 0, ineq: 0, eq: 0.00365656 }\n",
-      "  -- infeasible:push_motion1\n",
-      "     { time: 0.095872, evals: 201, done: 1, feasible: 0, sos: 0.563942, f: 0, ineq: 0.10862, eq: 2.2463 }\n",
-      "  -- infeasible:push_motion2\n",
-      "     { time: 0.056115, evals: 122, done: 1, feasible: 0, sos: 0.350946, f: 0, ineq: 0.21747, eq: 5.66167 }\n",
-      "  -- infeasible:push_motion3\n",
-      "     { time: 0.089109, evals: 201, done: 1, feasible: 0, sos: 0.213699, f: 0, ineq: 0.0340266, eq: 0.809333 }\n",
-      "  -- infeasible:push_motion4\n",
-      "     { time: 0.095819, evals: 201, done: 1, feasible: 0, sos: 0.559471, f: 0, ineq: 0.169495, eq: 1.68657 }\n",
-      "  -- infeasible:push_motion5\n",
-      "     { time: 0.089985, evals: 201, done: 1, feasible: 0, sos: 0.198409, f: 0, ineq: 0.0289246, eq: 0.761899 }\n",
+      "     { time: 0.025982, evals: 11, done: 1, feasible: 1, sos: 0.0515292, f: 0, ineq: 0, eq: 0.0204888 }\n",
+      "  -- feasible:push_motion1\n",
+      "     { time: 0.075368, evals: 200, done: 1, feasible: 1, sos: 0.30828, f: 0, ineq: 0, eq: 0.0476695 }\n",
+      "  -- feasible:sub_motion_0--push_motion1\n",
+      "     { time: 0.475977, evals: 201, done: 1, feasible: 1, sos: 3.45392, f: 0, ineq: 0.00304668, eq: 0.104026 }\n",
+      "  -- feasible:sub_motion_1--push_motion1\n",
+      "     { time: 0.024555, evals: 11, done: 1, feasible: 1, sos: 0.431257, f: 0, ineq: 0, eq: 0.00554877 }\n",
+      "  -- feasible:push_motion2\n",
+      "     { time: 0.069844, evals: 166, done: 1, feasible: 1, sos: 0.468526, f: 0, ineq: 0, eq: 0.0806799 }\n",
+      "  -- feasible:sub_motion_0--push_motion2\n",
+      "     { time: 0.538334, evals: 201, done: 1, feasible: 1, sos: 3.30406, f: 0, ineq: 0.0010619, eq: 0.120221 }\n",
+      "  -- feasible:sub_motion_1--push_motion2\n",
+      "     { time: 0.032071, evals: 14, done: 1, feasible: 1, sos: 0.0738787, f: 0, ineq: 0, eq: 0.014637 }\n",
+      "  -- feasible:push_motion3\n",
+      "     { time: 0.024781, evals: 63, done: 1, feasible: 1, sos: 0.202289, f: 0, ineq: 0, eq: 0.085486 }\n",
+      "  -- feasible:sub_motion_0--push_motion3\n",
+      "     { time: 0.827426, evals: 200, done: 1, feasible: 1, sos: 2.27067, f: 0, ineq: 0, eq: 0.258146 }\n",
+      "  -- feasible:sub_motion_1--push_motion3\n",
+      "     { time: 0.034116, evals: 10, done: 1, feasible: 1, sos: 0.0688557, f: 0, ineq: 0, eq: 0.0157012 }\n",
+      "  -- feasible:push_motion4\n",
+      "     { time: 0.099556, evals: 200, done: 1, feasible: 1, sos: 0.15739, f: 0, ineq: 0, eq: 0.138511 }\n",
+      "  -- feasible:sub_motion_0--push_motion4\n",
+      "     { time: 0.73679, evals: 201, done: 1, feasible: 1, sos: 1.72376, f: 0, ineq: 0.000670854, eq: 0.132166 }\n",
+      "  -- feasible:sub_motion_1--push_motion4\n",
+      "     { time: 0.033429, evals: 9, done: 1, feasible: 1, sos: 0.0227449, f: 0, ineq: 0, eq: 0.011311 }\n",
+      "  -- feasible:push_motion5\n",
+      "     { time: 0.058921, evals: 135, done: 1, feasible: 1, sos: 0.28914, f: 0, ineq: 0, eq: 0.00138073 }\n",
+      "  -- feasible:sub_motion_0--push_motion5\n",
+      "     { time: 0.968172, evals: 200, done: 1, feasible: 1, sos: 2.07683, f: 0, ineq: 0.000914875, eq: 0.0183638 }\n",
+      "  -- feasible:sub_motion_1--push_motion5\n",
+      "     { time: 0.143565, evals: 69, done: 1, feasible: 1, sos: 0.200813, f: 0, ineq: 0.00357596, eq: 0.0112334 }\n",
       "  -- infeasible:push_motion6\n",
-      "     { time: 0.090353, evals: 201, done: 1, feasible: 0, sos: 0.180514, f: 0, ineq: 0.0191228, eq: 2.10914 }\n",
+      "     { time: 0.089593, evals: 201, done: 1, feasible: 0, sos: 0.225303, f: 0, ineq: 0.105, eq: 3.68269 }\n",
       "  -- infeasible:push_motion7\n",
-      "     { time: 0.0968, evals: 201, done: 1, feasible: 0, sos: 0.495947, f: 0, ineq: 0.376311, eq: 2.43777 }\n",
+      "     { time: 0.104917, evals: 201, done: 1, feasible: 0, sos: 0.23084, f: 0, ineq: 0.00451654, eq: 0.760513 }\n",
       "  -- infeasible:push_motion8\n",
-      "     { time: 0.09638, evals: 201, done: 1, feasible: 0, sos: 0.315431, f: 0, ineq: 0.0151501, eq: 1.13593 }\n",
-      "  -- feasible:push_motion9\n",
-      "     { time: 0.050784, evals: 114, done: 1, feasible: 1, sos: 0.346744, f: 0, ineq: 1.96232e-05, eq: 0.0795837 }\n",
-      "  -- feasible:sub_motion_0--push_motion9\n",
-      "     { time: 0.719213, evals: 200, done: 1, feasible: 1, sos: 2.92211, f: 0, ineq: 0, eq: 0.125268 }\n",
-      "  -- feasible:sub_motion_1--push_motion9\n",
-      "     { time: 0.041105, evals: 14, done: 1, feasible: 1, sos: 0.0901006, f: 0, ineq: 0, eq: 0.0145728 }\n",
+      "     { time: 0.103652, evals: 200, done: 1, feasible: 0, sos: 0.244236, f: 0, ineq: 0.00556725, eq: 2.74951 }\n",
+      "  -- infeasible:push_motion9\n",
+      "     { time: 0.087593, evals: 201, done: 1, feasible: 0, sos: 0.226651, f: 0, ineq: 0.0232573, eq: 1.71382 }\n",
       "  -- infeasible:push_motion10\n",
-      "     { time: 0.089101, evals: 201, done: 1, feasible: 0, sos: 0.465793, f: 0, ineq: 0.384652, eq: 4.37963 }\n",
+      "     { time: 0.092282, evals: 201, done: 1, feasible: 0, sos: 0.225415, f: 0, ineq: 0.0136668, eq: 3.37955 }\n",
       "  -- infeasible:push_motion11\n",
-      "     { time: 0.08132, evals: 200, done: 1, feasible: 0, sos: 0.416066, f: 0, ineq: 0.179309, eq: 3.82705 }\n",
-      "  -- infeasible:push_motion12\n",
-      "     { time: 0.079068, evals: 200, done: 1, feasible: 0, sos: 0.14548, f: 0, ineq: 0.0197402, eq: 1.00329 }\n",
-      "  -- infeasible:push_motion13\n",
-      "     { time: 0.079639, evals: 201, done: 1, feasible: 0, sos: 0.455358, f: 0, ineq: 0.0205122, eq: 1.59112 }\n",
-      "  -- feasible:push_motion14\n",
-      "     { time: 0.07545, evals: 201, done: 1, feasible: 1, sos: 0.269243, f: 0, ineq: 0, eq: 0.0570261 }\n",
-      "  -- feasible:sub_motion_0--push_motion14\n",
-      "     { time: 0.499493, evals: 200, done: 1, feasible: 1, sos: 2.60888, f: 0, ineq: 0.000170772, eq: 0.0879234 }\n",
-      "  -- feasible:sub_motion_1--push_motion14\n",
-      "     { time: 0.031921, evals: 14, done: 1, feasible: 1, sos: 0.145781, f: 0, ineq: 0, eq: 0.00807763 }\n",
-      "  -- feasible:push_motion15\n",
-      "     { time: 0.083083, evals: 200, done: 1, feasible: 1, sos: 0.142821, f: 0, ineq: 0, eq: 0.0381268 }\n",
-      "  -- feasible:sub_motion_0--push_motion15\n",
-      "     { time: 0.532255, evals: 200, done: 1, feasible: 1, sos: 0.621618, f: 0, ineq: 0.000156682, eq: 0.0484288 }\n",
-      "  -- feasible:sub_motion_1--push_motion15\n",
-      "     { time: 0.024154, evals: 10, done: 1, feasible: 1, sos: 0.040185, f: 0, ineq: 0, eq: 0.00767416 }\n",
-      "  -- infeasible:push_motion16\n",
-      "     { time: 0.082011, evals: 200, done: 1, feasible: 0, sos: 0.174199, f: 0, ineq: 0.025633, eq: 0.879188 }\n",
+      "     { time: 0.091914, evals: 200, done: 1, feasible: 0, sos: 0.241539, f: 0, ineq: 0.0143612, eq: 2.33023 }\n",
+      "  -- feasible:push_motion12\n",
+      "     { time: 0.074538, evals: 160, done: 1, feasible: 1, sos: 0.38598, f: 0, ineq: 0.0142022, eq: 0.352276 }\n",
+      "  -- feasible:sub_motion_0--push_motion12\n",
+      "     { time: 0.92064, evals: 200, done: 1, feasible: 1, sos: 1.08844, f: 0, ineq: 0.0432533, eq: 0.148243 }\n",
+      "  -- infeasible:sub_motion_1--push_motion12\n",
+      "     { time: 0.411119, evals: 201, done: 1, feasible: 0, sos: 0.0825662, f: 0, ineq: 1.95261, eq: 1.32845 }\n",
+      "  -- feasible:push_motion13\n",
+      "     { time: 0.082975, evals: 200, done: 1, feasible: 1, sos: 0.236683, f: 0, ineq: 0.0019743, eq: 0.313948 }\n",
+      "  -- feasible:sub_motion_0--push_motion13\n",
+      "     { time: 0.881303, evals: 200, done: 1, feasible: 1, sos: 0.923191, f: 0, ineq: 0.018436, eq: 0.0802414 }\n",
+      "  -- feasible:sub_motion_1--push_motion13\n",
+      "     { time: 0.416798, evals: 200, done: 1, feasible: 1, sos: 9.23261, f: 0, ineq: 0.0798627, eq: 0.185874 }\n",
+      "  -- infeasible:push_motion14\n",
+      "     { time: 0.081131, evals: 201, done: 1, feasible: 0, sos: 0.424626, f: 0, ineq: 0.0118597, eq: 0.516989 }\n",
+      "  -- infeasible:push_motion15\n",
+      "     { time: 0.088022, evals: 200, done: 1, feasible: 0, sos: 0.217006, f: 0, ineq: 0.0508332, eq: 1.55568 }\n",
+      "  -- feasible:push_motion16\n",
+      "     { time: 0.081561, evals: 201, done: 1, feasible: 1, sos: 0.312568, f: 0, ineq: 0, eq: 0.0742323 }\n",
+      "  -- feasible:sub_motion_0--push_motion16\n",
+      "     { time: 0.785797, evals: 200, done: 1, feasible: 1, sos: 0.739684, f: 0, ineq: 0.0243734, eq: 0.086336 }\n",
+      "  -- infeasible:sub_motion_1--push_motion16\n",
+      "     { time: 0.368282, evals: 200, done: 1, feasible: 0, sos: 0.0539878, f: 0, ineq: 0.690259, eq: 0.396619 }\n",
       "  -- infeasible:push_motion17\n",
-      "     { time: 0.083824, evals: 201, done: 1, feasible: 0, sos: 0.150563, f: 0, ineq: 0.0170159, eq: 2.00351 }\n",
-      "  -- infeasible:push_motion18\n",
-      "     { time: 0.086971, evals: 200, done: 1, feasible: 0, sos: 0.149724, f: 0, ineq: 0.011567, eq: 0.583447 }\n",
+      "     { time: 0.085077, evals: 200, done: 1, feasible: 0, sos: 0.208386, f: 0, ineq: 0.067692, eq: 2.62682 }\n",
+      "  -- feasible:push_motion18\n",
+      "     { time: 0.022888, evals: 56, done: 1, feasible: 1, sos: 0.240493, f: 0, ineq: 0, eq: 0.000664172 }\n",
+      "  -- feasible:sub_motion_0--push_motion18\n",
+      "     { time: 1.02918, evals: 201, done: 1, feasible: 1, sos: 0.618825, f: 0, ineq: 0.00540992, eq: 0.0201944 }\n",
+      "  -- feasible:sub_motion_1--push_motion18\n",
+      "     { time: 0.387247, evals: 200, done: 1, feasible: 1, sos: 0.0441454, f: 0, ineq: 0.0367527, eq: 0.0331712 }\n",
       "  -- infeasible:push_motion19\n",
-      "     { time: 0.058317, evals: 146, done: 1, feasible: 0, sos: 0.210691, f: 0, ineq: 0.187488, eq: 0.92945 }\n",
-      "  -- infeasible:push_motion20\n",
-      "     { time: 0.077168, evals: 201, done: 1, feasible: 0, sos: 0.142059, f: 0, ineq: 0.0187928, eq: 1.57204 }\n",
+      "     { time: 0.082229, evals: 200, done: 1, feasible: 0, sos: 0.225464, f: 0, ineq: 0.0219899, eq: 2.99217 }\n",
+      "  -- feasible:push_motion20\n",
+      "     { time: 0.081875, evals: 201, done: 1, feasible: 1, sos: 0.277658, f: 0, ineq: 0, eq: 0.106221 }\n",
+      "  -- feasible:sub_motion_0--push_motion20\n",
+      "     { time: 0.68733, evals: 200, done: 1, feasible: 1, sos: 1.6785, f: 0, ineq: 0.00328134, eq: 0.11323 }\n",
+      "  -- feasible:sub_motion_1--push_motion20\n",
+      "     { time: 0.02406, evals: 12, done: 1, feasible: 1, sos: 0.20352, f: 0, ineq: 0, eq: 0.0111827 }\n",
       "  -- feasible:push_motion21\n",
-      "     { time: 0.083914, evals: 200, done: 1, feasible: 1, sos: 0.121981, f: 0, ineq: 0, eq: 0.0803117 }\n",
+      "     { time: 0.02567, evals: 71, done: 1, feasible: 1, sos: 0.0971653, f: 0, ineq: 0, eq: 0.0655566 }\n",
       "  -- feasible:sub_motion_0--push_motion21\n",
-      "     { time: 0.552747, evals: 200, done: 1, feasible: 1, sos: 0.379498, f: 0, ineq: 4.31449e-05, eq: 0.0752714 }\n",
+      "     { time: 0.439869, evals: 201, done: 1, feasible: 1, sos: 1.50801, f: 0, ineq: 3.78427e-06, eq: 0.0983598 }\n",
       "  -- feasible:sub_motion_1--push_motion21\n",
-      "     { time: 0.032944, evals: 11, done: 1, feasible: 1, sos: 0.185677, f: 0, ineq: 0, eq: 0.00704902 }\n",
-      "  -- feasible:push_motion22\n",
-      "     { time: 0.085784, evals: 200, done: 1, feasible: 1, sos: 0.149512, f: 0, ineq: 0, eq: 0.0706985 }\n",
-      "  -- feasible:sub_motion_0--push_motion22\n",
-      "     { time: 0.643386, evals: 201, done: 1, feasible: 1, sos: 2.13756, f: 0, ineq: 0.00164139, eq: 0.0874682 }\n",
-      "  -- feasible:sub_motion_1--push_motion22\n",
-      "     { time: 0.019416, evals: 9, done: 1, feasible: 1, sos: 0.0668048, f: 0, ineq: 0, eq: 0.00335374 }\n",
-      "  -- infeasible:push_motion23\n",
-      "     { time: 0.061979, evals: 133, done: 1, feasible: 0, sos: 0.253478, f: 0, ineq: 0.0155071, eq: 0.917085 }\n",
-      "  -- infeasible:push_motion24\n",
-      "     { time: 0.086141, evals: 201, done: 1, feasible: 0, sos: 0.540005, f: 0, ineq: 0.00856451, eq: 0.518665 }\n",
-      "  -- infeasible:push_motion25\n",
-      "     { time: 0.090483, evals: 201, done: 1, feasible: 0, sos: 0.534047, f: 0, ineq: 0.0543512, eq: 1.40513 }\n",
+      "     { time: 0.030018, evals: 10, done: 1, feasible: 1, sos: 0.0825209, f: 0, ineq: 0, eq: 0.00401872 }\n",
+      "  -- infeasible:push_motion22\n",
+      "     { time: 0.086364, evals: 201, done: 1, feasible: 0, sos: 0.263163, f: 0, ineq: 0.238806, eq: 3.8411 }\n",
+      "  -- feasible:push_motion23\n",
+      "     { time: 0.076868, evals: 200, done: 1, feasible: 1, sos: 0.29229, f: 0, ineq: 0, eq: 0.0143567 }\n",
+      "  -- feasible:sub_motion_0--push_motion23\n",
+      "     { time: 0.508945, evals: 201, done: 1, feasible: 1, sos: 2.23113, f: 0, ineq: 0.00024153, eq: 0.0273856 }\n",
+      "  -- feasible:sub_motion_1--push_motion23\n",
+      "     { time: 0.020683, evals: 11, done: 1, feasible: 1, sos: 0.220539, f: 0, ineq: 0, eq: 0.0020793 }\n",
+      "  -- feasible:push_motion24\n",
+      "     { time: 0.035489, evals: 79, done: 1, feasible: 1, sos: 0.425357, f: 0, ineq: 0, eq: 0.0282794 }\n",
+      "  -- infeasible:sub_motion_0--push_motion24\n",
+      "     { time: 0.903416, evals: 200, done: 1, feasible: 0, sos: 1.84219, f: 0, ineq: 0.10814, eq: 0.872528 }\n",
+      "  -- feasible:push_motion25\n",
+      "     { time: 0.085336, evals: 201, done: 1, feasible: 1, sos: 0.436288, f: 0, ineq: 0, eq: 0.00152643 }\n",
+      "  -- feasible:sub_motion_0--push_motion25\n",
+      "     { time: 0.929111, evals: 200, done: 1, feasible: 1, sos: 2.38249, f: 0, ineq: 0.0866585, eq: 0.387811 }\n",
+      "  -- feasible:sub_motion_1--push_motion25\n",
+      "     { time: 0.072345, evals: 32, done: 1, feasible: 1, sos: 0.0617864, f: 0, ineq: 0.00722705, eq: 0.0173366 }\n",
       "  -- infeasible:push_motion26\n",
-      "     { time: 0.090269, evals: 201, done: 1, feasible: 0, sos: 0.525841, f: 0, ineq: 0.107188, eq: 1.79233 }\n",
+      "     { time: 0.037104, evals: 83, done: 1, feasible: 0, sos: 0.366249, f: 0, ineq: 0.0616528, eq: 1.97906 }\n",
       "  -- infeasible:push_motion27\n",
-      "     { time: 0.091819, evals: 200, done: 1, feasible: 0, sos: 0.299702, f: 0, ineq: 0.00689229, eq: 0.867409 }\n",
+      "     { time: 0.029592, evals: 73, done: 1, feasible: 0, sos: 0.371525, f: 0, ineq: 0.0619524, eq: 1.67219 }\n",
       "  -- feasible:push_motion28\n",
-      "     { time: 0.024759, evals: 53, done: 1, feasible: 1, sos: 0.272087, f: 0, ineq: 0, eq: 0.0951022 }\n",
-      "  -- feasible:sub_motion_0--push_motion28\n",
-      "     { time: 0.68366, evals: 200, done: 1, feasible: 1, sos: 2.55593, f: 0, ineq: 4.34001e-05, eq: 0.112484 }\n",
-      "  -- feasible:sub_motion_1--push_motion28\n",
-      "     { time: 0.036015, evals: 12, done: 1, feasible: 1, sos: 0.0461542, f: 0, ineq: 0, eq: 0.00671255 }\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 16\u001b[0m\n\u001b[1;32m     14\u001b[0m \t\tbot\u001b[38;5;241m.\u001b[39mmove(path, [\u001b[38;5;241m3\u001b[39m])\n\u001b[1;32m     15\u001b[0m \t\t\u001b[38;5;28;01mwhile\u001b[39;00m bot\u001b[38;5;241m.\u001b[39mgetTimeToEnd() \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0.\u001b[39m:\n\u001b[0;32m---> 16\u001b[0m \t\t\t\u001b[43mbot\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msync\u001b[49m\u001b[43m(\u001b[49m\u001b[43mC\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     18\u001b[0m \tsuccess_count \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m success \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSuccessful motions: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msuccess_count\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mattempt_count\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "     { time: 0.084934, evals: 200, done: 1, feasible: 1, sos: 0.302934, f: 0, ineq: 0, eq: 0.0135535 }\n",
+      "  -- infeasible:sub_motion_0--push_motion28\n",
+      "     { time: 0.966182, evals: 201, done: 1, feasible: 0, sos: 0.154499, f: 0, ineq: 0.032681, eq: 0.662192 }\n",
+      "  -- feasible:push_motion29\n",
+      "     { time: 0.03273, evals: 69, done: 1, feasible: 1, sos: 0.341995, f: 0, ineq: 0.0154185, eq: 0.23875 }\n",
+      "  -- feasible:sub_motion_0--push_motion29\n",
+      "     { time: 1.07343, evals: 201, done: 1, feasible: 1, sos: 0.432314, f: 0, ineq: 0.0228557, eq: 0.0984572 }\n",
+      "  -- infeasible:sub_motion_1--push_motion29\n",
+      "     { time: 0.378981, evals: 200, done: 1, feasible: 0, sos: 0.184932, f: 0, ineq: 1.72296, eq: 1.26568 }\n",
+      "Successful motions: 12/30\n"
      ]
     }
    ],
