new notebook, updated update notes

--- a/2_Manipulation_Pulling.ipynb
+++ b/2_Manipulation_Pulling.ipynb
@@ -164,158 +164,36 @@
      "output_type": "stream",
      "text": [
       "  -- feasible:0\n",
-      "     { time: 0.051393, evals: 142, done: 1, feasible: 1, sos: 0.0451964, f: 0, ineq: 0, eq: 0.0921337 }\n",
+      "     { time: 0.043493, evals: 140, done: 1, feasible: 1, sos: 0.0551733, f: 0, ineq: 0, eq: 0.0920524 }\n",
       "  -- feasible:sub_motion_0--0\n",
-      "     { time: 0.028007, evals: 34, done: 1, feasible: 1, sos: 0.459157, f: 0, ineq: 6.01628e-08, eq: 0.000153745 }\n",
+      "     { time: 0.026816, evals: 34, done: 1, feasible: 1, sos: 0.459208, f: 0, ineq: 6.01906e-08, eq: 0.000153713 }\n",
       "  -- feasible:sub_motion_1--0\n",
-      "     { time: 0.006389, evals: 7, done: 1, feasible: 1, sos: 0.0200879, f: 0, ineq: 0, eq: 1.16884e-05 }\n",
+      "     { time: 0.004879, evals: 8, done: 1, feasible: 1, sos: 0.0658799, f: 0, ineq: 0, eq: 3.90804e-05 }\n",
       "  -- feasible:1\n",
-      "     { time: 0.066964, evals: 200, done: 1, feasible: 1, sos: 0.0292114, f: 0, ineq: 0, eq: 0.109592 }\n",
+      "     { time: 0.020329, evals: 67, done: 1, feasible: 1, sos: 0.0335756, f: 0, ineq: 0, eq: 0.169063 }\n",
       "  -- feasible:sub_motion_0--1\n",
-      "     { time: 0.019528, evals: 22, done: 1, feasible: 1, sos: 0.222505, f: 0, ineq: 1.10302e-06, eq: 7.1059e-05 }\n",
+      "     { time: 0.043263, evals: 52, done: 1, feasible: 1, sos: 0.288627, f: 0, ineq: 0.000613689, eq: 0.000278802 }\n",
       "  -- feasible:sub_motion_1--1\n",
-      "     { time: 0.003478, evals: 7, done: 1, feasible: 1, sos: 0.00687241, f: 0, ineq: 0, eq: 4.41173e-06 }\n",
+      "     { time: 0.00312, evals: 7, done: 1, feasible: 1, sos: 0.00712288, f: 0, ineq: 0, eq: 4.26719e-06 }\n",
       "  -- feasible:2\n",
-      "     { time: 0.065274, evals: 201, done: 1, feasible: 1, sos: 0.027903, f: 0, ineq: 0, eq: 0.103304 }\n",
+      "     { time: 0.041599, evals: 118, done: 1, feasible: 1, sos: 0.0281162, f: 0, ineq: 0, eq: 0.102084 }\n",
       "  -- feasible:sub_motion_0--2\n",
-      "     { time: 0.020382, evals: 23, done: 1, feasible: 1, sos: 0.203707, f: 0, ineq: 3.63566e-07, eq: 3.05428e-05 }\n",
+      "     { time: 0.016104, evals: 22, done: 1, feasible: 1, sos: 0.20141, f: 0, ineq: 6.43639e-07, eq: 3.47831e-05 }\n",
       "  -- feasible:sub_motion_1--2\n",
-      "     { time: 0.002952, evals: 7, done: 1, feasible: 1, sos: 0.0177451, f: 0, ineq: 0, eq: 1.09222e-05 }\n",
-      "  -- feasible:3\n",
-      "     { time: 0.023423, evals: 64, done: 1, feasible: 1, sos: 0.0324683, f: 0, ineq: 0, eq: 0.0716181 }\n",
-      "  -- feasible:sub_motion_0--3\n",
-      "     { time: 0.027648, evals: 34, done: 1, feasible: 1, sos: 0.238915, f: 0, ineq: 1.94521e-07, eq: 3.1135e-05 }\n",
-      "  -- feasible:sub_motion_1--3\n",
-      "     { time: 0.005703, evals: 7, done: 1, feasible: 1, sos: 0.0167072, f: 0, ineq: 0, eq: 8.47392e-06 }\n",
-      "  -- feasible:4\n",
-      "     { time: 0.015404, evals: 47, done: 1, feasible: 1, sos: 0.0307034, f: 0, ineq: 0, eq: 0.127153 }\n",
-      "  -- feasible:sub_motion_0--4\n",
-      "     { time: 0.037258, evals: 41, done: 1, feasible: 1, sos: 0.217982, f: 0, ineq: 1.00944e-06, eq: 5.94993e-05 }\n",
-      "  -- feasible:sub_motion_1--4\n",
-      "     { time: 0.003414, evals: 8, done: 1, feasible: 1, sos: 0.0361167, f: 0, ineq: 0, eq: 2.73158e-05 }\n",
-      "  -- feasible:5\n",
-      "     { time: 0.036195, evals: 103, done: 1, feasible: 1, sos: 0.0296921, f: 0, ineq: 0, eq: 0.079081 }\n",
-      "  -- feasible:sub_motion_0--5\n",
-      "     { time: 0.025649, evals: 37, done: 1, feasible: 1, sos: 0.277148, f: 0, ineq: 2.66545e-08, eq: 7.45622e-05 }\n",
-      "  -- feasible:sub_motion_1--5\n",
-      "     { time: 0.002908, evals: 7, done: 1, feasible: 1, sos: 0.0103909, f: 0, ineq: 0, eq: 7.63429e-06 }\n",
-      "  -- feasible:6\n",
-      "     { time: 0.066678, evals: 201, done: 1, feasible: 1, sos: 0.0290216, f: 0, ineq: 0, eq: 0.0814657 }\n",
-      "  -- feasible:sub_motion_0--6\n",
-      "     { time: 0.0175, evals: 23, done: 1, feasible: 1, sos: 0.215688, f: 0, ineq: 2.7981e-07, eq: 2.7091e-05 }\n",
-      "  -- feasible:sub_motion_1--6\n",
-      "     { time: 0.005073, evals: 8, done: 1, feasible: 1, sos: 0.0262671, f: 0, ineq: 0, eq: 2.88631e-05 }\n",
-      "  -- feasible:7\n",
-      "     { time: 0.060811, evals: 181, done: 1, feasible: 1, sos: 0.0404682, f: 0, ineq: 0, eq: 0.110223 }\n",
-      "  -- feasible:sub_motion_0--7\n",
-      "     { time: 0.022311, evals: 34, done: 1, feasible: 1, sos: 0.260726, f: 0, ineq: 7.81704e-08, eq: 4.36748e-05 }\n",
-      "  -- feasible:sub_motion_1--7\n",
-      "     { time: 0.005253, evals: 8, done: 1, feasible: 1, sos: 0.0571309, f: 0, ineq: 0, eq: 4.07475e-05 }\n",
-      "  -- feasible:8\n",
-      "     { time: 0.038702, evals: 111, done: 1, feasible: 1, sos: 0.0318863, f: 0, ineq: 0, eq: 0.100127 }\n",
-      "  -- feasible:sub_motion_0--8\n",
-      "     { time: 0.033421, evals: 41, done: 1, feasible: 1, sos: 0.288763, f: 0, ineq: 2.51276e-06, eq: 0.000119656 }\n",
-      "  -- feasible:sub_motion_1--8\n",
-      "     { time: 0.003094, evals: 7, done: 1, feasible: 1, sos: 0.0162425, f: 0, ineq: 0, eq: 9.4851e-06 }\n",
-      "  -- feasible:9\n",
-      "     { time: 0.022137, evals: 66, done: 1, feasible: 1, sos: 0.0294995, f: 0, ineq: 0, eq: 0.0724254 }\n",
-      "  -- feasible:sub_motion_0--9\n",
-      "     { time: 0.027123, evals: 37, done: 1, feasible: 1, sos: 0.237796, f: 0, ineq: 9.9177e-08, eq: 4.34635e-05 }\n",
-      "  -- feasible:sub_motion_1--9\n",
-      "     { time: 0.003313, evals: 7, done: 1, feasible: 1, sos: 0.00721495, f: 0, ineq: 0, eq: 3.99349e-06 }\n",
-      "  -- feasible:10\n",
-      "     { time: 0.070763, evals: 200, done: 1, feasible: 1, sos: 0.0284709, f: 0, ineq: 0, eq: 0.0949035 }\n",
-      "  -- feasible:sub_motion_0--10\n",
-      "     { time: 0.027148, evals: 37, done: 1, feasible: 1, sos: 0.215474, f: 0, ineq: 7.09227e-07, eq: 3.84766e-05 }\n",
-      "  -- feasible:sub_motion_1--10\n",
-      "     { time: 0.006049, evals: 7, done: 1, feasible: 1, sos: 0.00767736, f: 0, ineq: 0, eq: 5.56612e-06 }\n",
-      "  -- feasible:11\n",
-      "     { time: 0.023333, evals: 76, done: 1, feasible: 1, sos: 0.0297904, f: 0, ineq: 0, eq: 0.0621677 }\n",
-      "  -- feasible:sub_motion_0--11\n",
-      "     { time: 0.016689, evals: 22, done: 1, feasible: 1, sos: 0.218453, f: 0, ineq: 7.04112e-07, eq: 4.22265e-05 }\n",
-      "  -- feasible:sub_motion_1--11\n",
-      "     { time: 0.003142, evals: 7, done: 1, feasible: 1, sos: 0.0110207, f: 0, ineq: 0, eq: 7.42892e-06 }\n",
-      "  -- feasible:12\n",
-      "     { time: 0.069843, evals: 200, done: 1, feasible: 1, sos: 0.0277181, f: 0, ineq: 0, eq: 0.114982 }\n",
-      "  -- feasible:sub_motion_0--12\n",
-      "     { time: 0.020214, evals: 22, done: 1, feasible: 1, sos: 0.221026, f: 0, ineq: 5.7049e-07, eq: 3.19819e-05 }\n",
-      "  -- feasible:sub_motion_1--12\n",
-      "     { time: 0.003129, evals: 7, done: 1, feasible: 1, sos: 0.00867537, f: 0, ineq: 0, eq: 5.93375e-06 }\n",
-      "  -- feasible:13\n",
-      "     { time: 0.022253, evals: 69, done: 1, feasible: 1, sos: 0.0412028, f: 0, ineq: 0, eq: 0.0605894 }\n",
-      "  -- feasible:sub_motion_0--13\n",
-      "     { time: 0.01969, evals: 23, done: 1, feasible: 1, sos: 0.223356, f: 0, ineq: 4.06507e-07, eq: 3.01479e-05 }\n",
-      "  -- feasible:sub_motion_1--13\n",
-      "     { time: 0.003524, evals: 8, done: 1, feasible: 1, sos: 0.0639509, f: 0, ineq: 0, eq: 3.86889e-05 }\n",
-      "  -- feasible:14\n",
-      "     { time: 0.027767, evals: 84, done: 1, feasible: 1, sos: 0.0318515, f: 0, ineq: 0, eq: 0.0622687 }\n",
-      "  -- feasible:sub_motion_0--14\n",
-      "     { time: 0.044262, evals: 52, done: 1, feasible: 1, sos: 0.320365, f: 0, ineq: 0.000568685, eq: 0.000262352 }\n",
-      "  -- feasible:sub_motion_1--14\n",
-      "     { time: 0.003356, evals: 7, done: 1, feasible: 1, sos: 0.00469223, f: 0, ineq: 0, eq: 1.46497e-06 }\n",
-      "  -- feasible:15\n",
-      "     { time: 0.058571, evals: 171, done: 1, feasible: 1, sos: 0.0331512, f: 0, ineq: 0, eq: 0.104035 }\n",
-      "  -- feasible:sub_motion_0--15\n",
-      "     { time: 0.017961, evals: 23, done: 1, feasible: 1, sos: 0.233915, f: 0, ineq: 7.05908e-07, eq: 3.48324e-05 }\n",
-      "  -- feasible:sub_motion_1--15\n",
-      "     { time: 0.003471, evals: 8, done: 1, feasible: 1, sos: 0.0653884, f: 0, ineq: 0, eq: 3.98498e-05 }\n",
-      "  -- feasible:16\n",
-      "     { time: 0.023573, evals: 79, done: 1, feasible: 1, sos: 0.0447856, f: 0, ineq: 0, eq: 0.0615971 }\n",
-      "  -- feasible:sub_motion_0--16\n",
-      "     { time: 0.03325, evals: 36, done: 1, feasible: 1, sos: 0.386373, f: 0, ineq: 1.16442e-07, eq: 9.08811e-05 }\n",
-      "  -- feasible:sub_motion_1--16\n",
-      "     { time: 0.003919, evals: 8, done: 1, feasible: 1, sos: 0.0580683, f: 0, ineq: 0, eq: 3.68115e-05 }\n",
-      "  -- feasible:17\n",
-      "     { time: 0.031909, evals: 100, done: 1, feasible: 1, sos: 0.0337881, f: 0, ineq: 0, eq: 0.141871 }\n",
-      "  -- feasible:sub_motion_0--17\n",
-      "     { time: 0.028148, evals: 41, done: 1, feasible: 1, sos: 0.318555, f: 0, ineq: 3.04758e-06, eq: 0.000114258 }\n",
-      "  -- feasible:sub_motion_1--17\n",
-      "     { time: 0.004069, evals: 8, done: 1, feasible: 1, sos: 0.0340804, f: 0, ineq: 0, eq: 2.82126e-05 }\n",
-      "  -- feasible:18\n",
-      "     { time: 0.068861, evals: 200, done: 1, feasible: 1, sos: 0.0299179, f: 0, ineq: 0, eq: 0.0765567 }\n",
-      "  -- feasible:sub_motion_0--18\n",
-      "     { time: 0.026281, evals: 34, done: 1, feasible: 1, sos: 0.297173, f: 0, ineq: 4.03623e-08, eq: 6.52985e-05 }\n",
-      "  -- feasible:sub_motion_1--18\n",
-      "     { time: 0.002921, evals: 7, done: 1, feasible: 1, sos: 0.0145377, f: 0, ineq: 0, eq: 9.59141e-06 }\n",
-      "  -- feasible:19\n",
-      "     { time: 0.030654, evals: 89, done: 1, feasible: 1, sos: 0.0339673, f: 0, ineq: 0, eq: 0.061728 }\n",
-      "  -- feasible:sub_motion_0--19\n",
-      "     { time: 0.027821, evals: 37, done: 1, feasible: 1, sos: 0.259955, f: 0, ineq: 4.45654e-07, eq: 3.37079e-05 }\n",
-      "  -- feasible:sub_motion_1--19\n",
-      "     { time: 0.005574, evals: 8, done: 1, feasible: 1, sos: 0.027635, f: 0, ineq: 0, eq: 2.92731e-05 }\n",
-      "  -- feasible:20\n",
-      "     { time: 0.056803, evals: 171, done: 1, feasible: 1, sos: 0.0302509, f: 0, ineq: 0, eq: 0.0966501 }\n",
-      "  -- feasible:sub_motion_0--20\n",
-      "     { time: 0.014555, evals: 22, done: 1, feasible: 1, sos: 0.272179, f: 0, ineq: 1.92661e-06, eq: 9.18063e-05 }\n",
-      "  -- feasible:sub_motion_1--20\n",
-      "     { time: 0.002799, evals: 7, done: 1, feasible: 1, sos: 0.0077008, f: 0, ineq: 0, eq: 4.67951e-06 }\n",
-      "  -- feasible:21\n",
-      "     { time: 0.041097, evals: 122, done: 1, feasible: 1, sos: 0.0345769, f: 0, ineq: 0, eq: 0.10757 }\n",
-      "  -- feasible:sub_motion_0--21\n",
-      "     { time: 0.015377, evals: 23, done: 1, feasible: 1, sos: 0.236997, f: 0, ineq: 5.27671e-07, eq: 3.20006e-05 }\n",
-      "  -- feasible:sub_motion_1--21\n",
-      "     { time: 0.004396, evals: 8, done: 1, feasible: 1, sos: 0.0287272, f: 0, ineq: 0, eq: 2.67773e-05 }\n",
-      "  -- feasible:22\n",
-      "     { time: 0.051273, evals: 150, done: 1, feasible: 1, sos: 0.030278, f: 0, ineq: 0, eq: 0.107047 }\n",
-      "  -- feasible:sub_motion_0--22\n",
-      "     { time: 0.031572, evals: 41, done: 1, feasible: 1, sos: 0.27101, f: 0, ineq: 1.65965e-06, eq: 7.18854e-05 }\n",
-      "  -- feasible:sub_motion_1--22\n",
-      "     { time: 0.004119, evals: 7, done: 1, feasible: 1, sos: 0.0057583, f: 0, ineq: 0, eq: 3.67112e-06 }\n",
-      "  -- infeasible:23\n",
-      "     { time: 0.064914, evals: 200, done: 1, feasible: 0, sos: 0.0422548, f: 0, ineq: 0, eq: 0.779711 }\n",
-      "  -- infeasible:24\n",
-      "     { time: 0.072589, evals: 201, done: 1, feasible: 0, sos: 0.0338353, f: 0, ineq: 0, eq: 0.770937 }\n",
-      "  -- infeasible:25\n",
-      "     { time: 0.065342, evals: 200, done: 1, feasible: 0, sos: 0.0264579, f: 0, ineq: 0, eq: 0.760313 }\n",
-      "  -- infeasible:26\n",
-      "     { time: 0.062423, evals: 201, done: 1, feasible: 0, sos: 0.0276988, f: 0, ineq: 0, eq: 0.762095 }\n",
-      "  -- infeasible:27\n",
-      "     { time: 0.063463, evals: 200, done: 1, feasible: 0, sos: 0.0267767, f: 0, ineq: 0, eq: 0.762116 }\n",
-      "  -- infeasible:28\n",
-      "     { time: 0.063406, evals: 201, done: 1, feasible: 0, sos: 0.0366225, f: 0, ineq: 0, eq: 0.749107 }\n",
-      "  -- infeasible:29\n",
-      "     { time: 0.06788, evals: 201, done: 1, feasible: 0, sos: 0.0300462, f: 0, ineq: 0, eq: 0.76387 }\n",
-      "Successful motions: 23/30\n"
+      "     { time: 0.003969, evals: 7, done: 1, feasible: 1, sos: 0.0150897, f: 0, ineq: 0, eq: 8.63889e-06 }\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 11\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m l \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(attempt_count):\n\u001b[1;32m      6\u001b[0m \ttarget_position \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m      7\u001b[0m \t\tmidpoint[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39muniform(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m.15\u001b[39m, \u001b[38;5;241m.15\u001b[39m),\n\u001b[1;32m      8\u001b[0m \t\tmidpoint[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m+\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39muniform(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m.15\u001b[39m, \u001b[38;5;241m.15\u001b[39m),\n\u001b[1;32m      9\u001b[0m \t\t\u001b[38;5;241m0.\u001b[39m]\n\u001b[0;32m---> 11\u001b[0m \tsuccess, path \u001b[38;5;241m=\u001b[39m \u001b[43mpull\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbox\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget_position\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43ml\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m     13\u001b[0m \t\u001b[38;5;28;01mif\u001b[39;00m success:\n\u001b[1;32m     14\u001b[0m \t\tbot\u001b[38;5;241m.\u001b[39mmove(path, [\u001b[38;5;241m3\u001b[39m])\n",
+      "Cell \u001b[0;32mIn[3], line 23\u001b[0m, in \u001b[0;36mpull\u001b[0;34m(obj, target_pos, info, vis)\u001b[0m\n\u001b[1;32m     20\u001b[0m \t\u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m, []\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m vis:\n\u001b[0;32m---> 23\u001b[0m \t\u001b[43mM1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mplay\u001b[49m\u001b[43m(\u001b[49m\u001b[43mC\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1.\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     24\u001b[0m \tC\u001b[38;5;241m.\u001b[39mattach(gripper, obj)\n\u001b[1;32m     25\u001b[0m \tM2\u001b[38;5;241m.\u001b[39mplay(C, \u001b[38;5;241m1.\u001b[39m)\n",
+      "File \u001b[0;32m~/Robotic_Manipulation/manipulation.py:545\u001b[0m, in \u001b[0;36mManipulationModelling.play\u001b[0;34m(self, C, duration)\u001b[0m\n\u001b[1;32m    543\u001b[0m C\u001b[38;5;241m.\u001b[39msetJointState(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpath[t])\n\u001b[1;32m    544\u001b[0m C\u001b[38;5;241m.\u001b[39mview(\u001b[38;5;28;01mFalse\u001b[39;00m, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstep \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mt\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minfo\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m--> 545\u001b[0m \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[43mduration\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpath\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
