--- a/5_Manipulation_Shelf.ipynb
+++ b/5_Manipulation_Shelf.ipynb
@@ -9,18 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import robotic as ry\n",
-    "import manipulation as manip"
+    "from time import sleep\n",
+    "import manipulation as manip\n",
+    "from shelf import generate_shelf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +31,7 @@
        "0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,95 +44,57 @@
     "C.getFrame(\"table\").setShape(ry.ST.ssBox, size=[1., 1., .1, .02])\n",
     "\n",
     "# Shelf\n",
-    "pos = np.array([-.7, 0., 1.])\n",
-    "small_opening_dims = [.2, .2, .2]\n",
-    "inner_wall_width = .005\n",
-    "\n",
-    "openings_small = [4, 6]\n",
-    "\n",
-    "for i in range(openings_small[0]):\n",
-    "\tfor j in range(openings_small[1]):\n",
-    "\t\topening_pos = np.array([0, i*small_opening_dims[0], j*small_opening_dims[1]]) + pos - np.array([0, openings_small[0]*small_opening_dims[0]*.5, openings_small[1]*small_opening_dims[1]*.5]) + np.array([0, small_opening_dims[0]*.5, small_opening_dims[1]*.5])\n",
-    "\t\tC.addFrame(f\"small_box_left_{i}_{j}\") \\\n",
-    "\t\t\t.setPosition(opening_pos - np.array([0., small_opening_dims[0]*.5, 0.])) \\\n",
-    "\t\t\t.setShape(ry.ST.ssBox, size=[small_opening_dims[2], inner_wall_width, small_opening_dims[1], 0.005]) \\\n",
-    "\t\t\t.setColor([1., 1., 0.]) \\\n",
-    "\t\t\t.setContact(1)\n",
-    "\t\tC.addFrame(f\"small_box_right_{i}_{j}\") \\\n",
-    "\t\t\t.setPosition(opening_pos - np.array([0., -small_opening_dims[0]*.5, 0.])) \\\n",
-    "\t\t\t.setShape(ry.ST.ssBox, size=[small_opening_dims[2], inner_wall_width, small_opening_dims[1], 0.005]) \\\n",
-    "\t\t\t.setColor([1., 1., 0.]) \\\n",
-    "\t\t\t.setContact(1)\n",
-    "\t\tC.addFrame(f\"small_box_top_{i}_{j}\") \\\n",
-    "\t\t\t.setPosition(opening_pos - np.array([0., 0., -small_opening_dims[1]*.5])) \\\n",
-    "\t\t\t.setShape(ry.ST.ssBox, size=[small_opening_dims[2], small_opening_dims[0], inner_wall_width, 0.005]) \\\n",
-    "\t\t\t.setColor([1., 1., 0.]) \\\n",
-    "\t\t\t.setContact(1)\n",
-    "\t\tC.addFrame(f\"small_box_bottom_{i}_{j}\") \\\n",
-    "\t\t\t.setPosition(opening_pos - np.array([0., 0., small_opening_dims[1]*.5])) \\\n",
-    "\t\t\t.setShape(ry.ST.ssBox, size=[small_opening_dims[2], small_opening_dims[0], inner_wall_width, 0.005]) \\\n",
-    "\t\t\t.setColor([1., 1., 0.]) \\\n",
-    "\t\t\t.setContact(1)\n",
-    "\t\tC.addFrame(f\"small_box_blocker_{i}_{j}\") \\\n",
-    "\t\t\t.setPosition(opening_pos - np.array([-small_opening_dims[0]*.5, 0., small_opening_dims[1]*.5-.015])) \\\n",
-    "\t\t\t.setShape(ry.ST.ssBox, size=[inner_wall_width, small_opening_dims[0], .03, 0.005]) \\\n",
-    "\t\t\t.setColor([1., 1., 0.]) \\\n",
-    "\t\t\t.setContact(1)\n",
-    "\t\t\n",
-    "\t\tC.addFrame(f\"small_box_inside_{i}_{j}\") \\\n",
-    "\t\t\t.setPosition(opening_pos) \\\n",
-    "\t\t\t.setShape(ry.ST.ssBox, size=[small_opening_dims[2], small_opening_dims[0], small_opening_dims[1], 0.005]) \\\n",
-    "\t\t\t.setColor([0., 0., 1., .5])\n",
-    "\t\t\n",
-    "C.addFrame(f\"shelf_back_{i}_{j}\") \\\n",
-    "\t.setPosition(pos - np.array([small_opening_dims[2]*.5, 0, 0])) \\\n",
-    "\t.setShape(ry.ST.ssBox, size=[inner_wall_width, openings_small[0]*small_opening_dims[0], openings_small[1]*small_opening_dims[1], 0.005]) \\\n",
-    "\t.setColor([1., 1., 0.]) \\\n",
-    "\t.setContact(1)\n",
+    "pos = np.array([-1., 0., .5])\n",
+    "generate_shelf(C, pos)\n",
     "\n",
     "# Objects\n",
-    "C.addFrame(f\"box\") \\\n",
-    "\t.setPosition([0, 0, .7]) \\\n",
-    "\t.setShape(ry.ST.ssBox, size=[.04, .04, .12, 0.005]) \\\n",
-    "\t.setColor([1., 0., 0.]) \\\n",
-    "\t.setContact(1) \\\n",
-    "\t.setMass(.1)\n",
-    "\n",
+    "for i in range(6):\n",
+    "\tcolor = [0., 0., 0.]\n",
+    "\tcolor[i%3] = 1.\n",
+    "\tC.addFrame(f\"box{i}\") \\\n",
+    "\t\t.setPosition([(i%3)*.1, (i//3)*.1, .7]) \\\n",
+    "\t\t.setShape(ry.ST.ssBox, size=[.04, .04, .12, 0.005]) \\\n",
+    "\t\t.setColor(color) \\\n",
+    "\t\t.setContact(1) \\\n",
+    "\t\t.setMass(.1)\n",
+    "\t\n",
     "# for convenience, a few definitions:\n",
     "gripper = \"l_gripper\"\n",
     "palm = \"l_palm\"\n",
     "table = \"table\"\n",
-    "box = \"box\"\n",
+    "box = \"box0\"\n",
     "\n",
     "C.view()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from time import sleep\n",
-    "def pick_place(shelf_coor: list[float], vis: bool=False) -> bool:\n",
-    "\tbox = \"box\"\n",
+    "def pick_place(boxes: list[str], shelf_coor: list[list[int]], vis: bool=False) -> bool:\n",
     "\tM = manip.ManipulationModelling(C, \"shelf_task\", helpers=[gripper])\n",
-    "\tM.setup_pick_and_place_waypoints(gripper, box, homing_scale=1e-1)\n",
-    "\tM.grasp_box(1., gripper, box, \"l_palm\", \"x\")\n",
-    "\tM.komo.addObjective([2.], ry.FS.insideBox, [box, f\"small_box_inside_{shelf_coor[0]}_{shelf_coor[1]}\"], ry.OT.ineq, [1e1])\n",
+    "\tM.setup_pick_and_place_sequence(gripper, boxes, accumulated_collisions=False)\n",
+    "\n",
+    "\tfor i, sc in enumerate(shelf_coor):\n",
+    "\t\ttime = i*2+1\n",
+    "\t\tM.grasp_box(time, gripper, boxes[i], \"l_palm\", \"x\")\n",
+    "\t\tM.komo.addObjective([time+1], ry.FS.insideBox, [f\"small_box_inside_0_{sc[0]}_{sc[1]}\", boxes[i]], ry.OT.ineq, [1e1])\n",
+    "\t\tM.komo.addObjective([time+1], ry.FS.scalarProductXZ, [table, gripper], ry.OT.eq, [1e1], [1.])\n",
     "\t\n",
     "\tkeypoints = M.solve()\n",
+    "\tM.komo.report(plotOverTime=True)\n",
     "\tif not M.feasible:\n",
-    "\t\tM.komo.report(plotOverTime=True)\n",
-    "\t\tC.view(True, f\"{M.feasible}\")\n",
+    "\t\t# C.view(True, f\"{M.feasible}\")\n",
     "\t\treturn False, []\n",
     "\t\n",
     "\tfor i, k in enumerate(keypoints):\n",
     "\t\tC.setJointState(k)\n",
     "\t\tif i%2:\n",
-    "\t\t\tC.attach(table, box)\n",
+    "\t\t\tC.attach(table, boxes[i//2])\n",
     "\t\telse:\n",
-    "\t\t\tC.attach(gripper, box)\n",
+    "\t\t\tC.attach(gripper, boxes[i//2])\n",
     "\t\tC.view(False, f'step {i}')\n",
     "\t\tsleep(1.)\n",
     "\n",
@@ -164,12 +128,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  -- infeasible:shelf_task\n",
+      "     { time: 0.915251, evals: 200, done: 1, feasible: 0, sos: 0.430689, f: 0, ineq: 0.187772, eq: 0.725134 }\n"
+     ]
+    }
+   ],
    "source": [
-    "shelf_coor = [2, 2]\n",
-    "success, _ = pick_place(shelf_coor, vis=True)"
+    "boxes = [f\"box{i}\" for i in range(6)]\n",
+    "shelf_coor = [[2, 3], [2, 2], [1, 3], [1, 2], [1, 1], [3, 3]]\n",
+    "for i, sc in enumerate(shelf_coor):\n",
+    "\tc = [0., 0., 0., .5]\n",
+    "\tc[i%3] = 1.\n",
+    "\tC.getFrame(f\"small_box_inside_0_{sc[0]}_{sc[1]}\") \\\n",
+    "\t\t\t.setColor(c)\n",
+    "C.view()\n",
+    "success, _ = pick_place(boxes, shelf_coor, vis=True)"
    ]
   },
   {
